tests/snapshots/docx/pandoc/notes.docx.snap
---
source: crates/docspec-docx-reader/tests/pandoc_corpus.rs
expression: snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartHeading { id: None, level: 2 }
       2: Text { content: "A footnote" }
       3: EndHeading
       4: StartParagraph { alignment: None, id: None }
       5: EndParagraph
       6: StartParagraph { alignment: None, id: None }
       7: Text { content: "Test footnote" }
       8: Text { content: "." }
       9: Text { content: " Test endnote." }
      10: EndParagraph
      11: EndDocument
  ],
  terminal: Ok,
}
