tests/snapshots/docx/pandoc/numbered_header.docx.snap
---
source: crates/docspec-docx-reader/tests/pandoc_corpus.rs
expression: snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartHeading { id: None, level: 1 }
       2: Text { content: "A Numbered Header." }
       3: EndHeading
       4: EndDocument
  ],
  terminal: Ok,
}
