tests/snapshots/docx/pandoc/overlapping_targets.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    StartLink { href: "#Fizz", id: None, title: None },
    Text { content: "One link to one target." },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a target with two names." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartLink { href: "#Pop", id: None, title: None },
    Text { content: "Another link to the same target." },
    EndLink,
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
