tests/snapshots/docx/pandoc/pageref.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    Text { content: "Title" },
    Text { content: "\t" },
    Text { content: "2" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    Text { content: "Title2" },
    Text { content: "\t" },
    Text { content: "2" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    LineBreak,
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "Title" },
    EndHeading,
    StartHeading { id: None, level: 1 },
    Text { content: "Title2" },
    EndHeading,
    EndDocument,
  ],
  terminal: Ok,
}
