tests/snapshots/docx/pandoc/paragraph_insertion_deletion.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: " " },
    Text { content: "split" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Paragraph." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
