tests/snapshots/docx/pandoc/relative_indentation_blockquotes.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartHeading { id: None, level: 1 },
    Text { content: "Indentation blockquotes" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "Foobar" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "First line indented." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Normal list paragraph" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "List paragraph with less indent" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "List paragraph with more indent " },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
