tests/snapshots/docx/pandoc/special_punctuation.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Soft hyphen: [" },
    Text { content: "]" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Non-breaking hyphen: [" },
    Text { content: "]" },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
